--- a/Game Predictor.ipynb
+++ b/Game Predictor.ipynb
@@ -19,17 +19,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "df = pd.DataFrame(columns=['team', 'win%', 'date'])\n",
+    "df_columns = ['team', 'win%', 'date', 'result']\n",
+    "df = pd.DataFrame(columns=df_columns)\n",
     "\n",
     "output_file = 'z:\\python_projects\\aaa.exe'\n",
     "year = 2019\n",
+    "result = ''\n",
     "URL = 'https://projects.fivethirtyeight.com/2019-nfl-predictions/games/?ex_cid=rrpromo'\n",
-    "headers = {\"User-Agent\": 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.90 Safari/537.36'}\n",
+    "headers = {'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.90 Safari/537.36'}\n",
     "source = requests.get(URL, headers=headers)\n",
     "soup = BeautifulSoup(source.content, 'html.parser')\n",
     "\n",
@@ -44,10 +45,9 @@
     "        for date in week.findAll('div', attrs={'class': 'days'}):\n",
     "            for day in date.findAll('div', attrs={'class': 'day'}):  \n",
     "                for game in day.findAll('div', attrs={'class': 'game'}):\n",
-    "                    \n",
+    "\n",
     "                    # Finding date of each game  \n",
     "                    for h4 in day.findAll('h4', attrs={'class': 'h4'}):\n",
-    "                        date_list.append(h4.get_text())\n",
     "                        date = h4.get_text()\n",
     "                        date = date.split(', ')[1]\n",
     "                        date = date[0:3] + date[4:6] + ' ' + str(year)\n",
@@ -58,30 +58,35 @@
     "                    # Finding data for each game\n",
     "                    for game_body in game.findAll('table', attrs={'class': 'game-body'}):           \n",
     "                        for num_teams, matchup in enumerate(game_body.findAll('tr', attrs={'class': 'tr'})):\n",
-    "                            for name in matchup.findAll('td', attrs={'class': 'td text team'}):\n",
-    "                                if num_teams == 0:\n",
-    "                                    team = name.get_text().strip()\n",
-    "                                else:\n",
-    "                                    team = name.get_text().strip()\n",
-    "                                    \n",
-    "                            for win_percentage in matchup.findAll('td', attrs={'class': 'td number chance'}):\n",
-    "                                if num_teams == 0:\n",
-    "                                    prob = win_percentage.get_text()\n",
-    "                                else:\n",
-    "                                    prob = win_percentage.get_text()\n",
-    "\n",
-    "                            if num_teams ==  0:\n",
-    "                                df = df.append(pd.Series([team, prob, date], \n",
-    "                                               index=['team', 'win%', 'date']), ignore_index=True)\n",
+    "                            squad = matchup.find('td', attrs={'class': 'td text team'})\n",
+    "                            winner = matchup.find('td', attrs={'class': 'td text team winner'})\n",
+    "                            loser = matchup.find('td', attrs={'class': 'td text team loser'})\n",
+    "                            win_percentage = matchup.find('td', attrs={'class': 'td number chance'}).get_text().strip()\n",
+    "                            \n",
+    "                            if squad:\n",
+    "                                team = squad.get_text().strip()\n",
+    "                                result = ''\n",
+    "                            elif winner:\n",
+    "                                team = winner.get_text().strip()\n",
+    "                                result = 'w'\n",
+    "                            elif loser:\n",
+    "                                team = loser.get_text().strip()\n",
+    "                                result = 'l'\n",
     "                            else:\n",
-    "                                df = df.append(pd.Series([team, prob, ''], \n",
-    "                                               index=['team', 'win%', 'date']), ignore_index=True)\n",
+    "                                team = ''\n",
+    "                                result = ''\n",
+    "                            if num_teams ==  0:\n",
+    "                                df = df.append(pd.Series([team, win_percentage, date, result], \n",
+    "                                               index=['team', 'win%', 'date', 'result']), ignore_index=True)\n",
+    "                            else:\n",
+    "                                df = df.append(pd.Series([team, win_percentage, '', result], \n",
+    "                                               index=['team', 'win%', 'date', 'result']), ignore_index=True)\n",
     "                                \n",
+    "                            \n",
     "\n",
     "#div = soup.findAll('section', attrs={'class': 'week'}).get_text()\n",
     "#div2 = soup.select('h3.days')#.week-group.week.days.daygames_wrap.game.game-bod')\n",
     "\n",
-    "#print(div)\n",
     "#df.to_csv('z:\\\\Python Projects\\\\Score Predictor.csv', mode = 'a')\n",
     "from datetime import datetime\n",
     "datetime.strptime('Oct', '%b')\n",
@@ -92,12 +97,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "names = ['Open', 'odds','Westgate Superbook','MGM Mirage', 'betMGM', \n",
+    "names = ['Open', 'odds','Westgate','MGM Mirage', 'betMGM', \n",
     "         'William Hill', 'CG Technology', 'Circa Sports','Stations']\n",
     "book = pd.DataFrame(columns=names)\n",
     "output_file = 'z:\\python_projects\\aaa.exe'\n",
@@ -180,13 +184,111 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
    "outputs": [],
    "source": [
     "spreadsheet = pd.merge(odds, df)\n",
-    "spreadsheet = spreadsheet[['date', 'team', 'win%', 'odds']]\n",
+    "spreadsheet = spreadsheet[['date', 'team', 'win%', 'result', 'odds']]\n",
     "spreadsheet.set_index('date')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "spreadsheet = pd.merge(odds, df)\n",
+    "spreadsheet = spreadsheet[['date', 'team', 'win%', 'result', 'odds']]\n",
+    "spreadsheet.set_index('date')\n",
+    "spreadsheet['implied%'] = spreadsheet.apply(lambda row: implied_probability(row),\n",
+    "                                            axis=1)\n",
+    "spreadsheet['pick'] = spreadsheet.apply(lambda row: pick(row), axis=1)\n",
+    "spreadsheet['w/l'] = spreadsheet.apply(lambda row: win_loss(row), axis=1)\n",
+    "spreadsheet = spreadsheet[['date', 'team', 'win%', 'odds', 'implied%', \n",
+    "                           'pick', 'result', 'w/l']]\n",
+    "spreadsheet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def implied_probability(row):\n",
+    "    \"\"\"Uses odds to determine implied probability\n",
+    "    Args:\n",
+    "        row: row of data from dataframe\n",
+    "    Returns:\n",
+    "        implied win probability if it exists\n",
+    "    \"\"\"\n",
+    "    if row['odds'] == '':\n",
+    "        return('')\n",
+    "    elif row['odds'][0] == '+':\n",
+    "        return(100.0/(100+int(row['odds'][1:])))\n",
+    "    elif row['odds'][0] == '-':\n",
+    "        return(int(row['odds'][1:])/(100.0+int(row['odds'][1:])))\n",
+    "    else:\n",
+    "        return('')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def pick(row):\n",
+    "    \"\"\"Uses win% and odds to determine what team to pick\n",
+    "    Args:\n",
+    "        row: row of data from dataframe\n",
+    "    Returns:\n",
+    "        pick if there is one\n",
+    "    \"\"\"\n",
+    "    if row['implied%'] == '':\n",
+    "        return('')\n",
+    "    elif (float(row['win%'][:-1])/100.0 > row['implied%']):\n",
+    "        return(row.team)\n",
+    "    else:\n",
+    "        return('')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def win_loss(row):\n",
+    "    \"\"\"Determines amount won lost\n",
+    "    Args:\n",
+    "        row: row of data from dataframe\n",
+    "    Returns:\n",
+    "        =amount won/lost\n",
+    "    \"\"\"\n",
+    "    if row['pick'] == '':\n",
+    "        return('')\n",
+    "    else:\n",
+    "        if row['result'] == 'w':\n",
+    "            if row['odds'][0] == '+':\n",
+    "                return(row['odds'][1:])\n",
+    "            else:\n",
+    "                return(100)\n",
+    "        elif row['result'] == 'l':\n",
+    "            if row['odds'][0] == '+':\n",
+    "                return(-100)\n",
+    "            else:\n",
+    "                return(row['odds'][1:]) \n",
+    "        else:\n",
+    "            return('')\n",
+    "        "
    ]
   }
  ],
