--- a/Game Predictor.ipynb
+++ b/Game Predictor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -19,22 +19,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "code_folding": [
      0,
-     58,
-     66,
-     127,
-     196,
-     248,
-     259,
-     278,
-     295,
-     309,
-     323,
-     345
+     59,
+     67,
+     134,
+     218,
+     271,
+     282,
+     289,
+     301,
+     305,
+     317,
+     328,
+     330,
+     342,
+     344,
+     356,
+     366,
+     378
     ],
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -97,6 +104,7 @@
     "    #df.set_index('date')\n",
     "    \n",
     "    return df, year\n",
+    "    \n",
     "def getting_spreadsheet(file_name):\n",
     "    \"\"\"Loads spreadsheet\n",
     "    Args:\n",
@@ -105,10 +113,13 @@
     "        dataframe of data\n",
     "    \"\"\"\n",
     "    return(pd.read_csv(file_name))\n",
-    "def predictions_538(df):\n",
+    "def predictions_538(week_num):\n",
     "    \"\"\"Loads 538 predictions\n",
+    "    Args:\n",
+    "        week_num: week number of games\n",
     "    Returns:\n",
-    "        dataframe of 538 predictions\n",
+    "        df: dataframe with 538 predictions\n",
+    "        year: year of games. Needed for Vegas odds\n",
     "    \"\"\"\n",
     "    year = 2019\n",
     "    result = ''\n",
@@ -116,7 +127,10 @@
     "    headers = {'User-Agent': header_name}\n",
     "    source = requests.get(URL, headers=headers)\n",
     "    soup = BeautifulSoup(source.content, 'html.parser')\n",
+    "    cols = ['date', 'team', 'win%']\n",
     "    blank_rows = ['']*(len(df.columns)-3)\n",
+    "    cols.extend(blank_rows)\n",
+    "    predictions = pd.DataFrame(columns=cols)\n",
     "\n",
     "    # Finding year of predictions\n",
     "    for timestamp in soup.findAll('div', attrs={'class': 'container'}):\n",
@@ -125,7 +139,7 @@
     "\n",
     "    # Gathering data\n",
     "    for week in soup.findAll('section', attrs={'class': 'week'}):\n",
-    "        if week.get_text()[5] == '6':\n",
+    "        if week.get_text()[5] == str(week_num):\n",
     "            for date in week.findAll('div', attrs={'class': 'days'}):\n",
     "                for day in date.findAll('div', attrs={'class': 'day'}):  \n",
     "                    for game in day.findAll('div', attrs={'class': 'game'}):\n",
@@ -153,19 +167,19 @@
     "                                        row_data = [date, team, win_percentage]\n",
     "                                        row_data.extend(blank_rows)\n",
     "                                        \n",
-    "                                        df = df.append(pd.Series(row_data, index=df.columns), \n",
-    "                                                                  ignore_index=True)\n",
+    "                                        predictions = predictions.append(pd.Series(row_data, index=predictions.columns), \n",
+    "                                                                         ignore_index=True)\n",
     "                                    else:\n",
     "                                        row_data = ['', team, win_percentage]\n",
     "                                        row_data.extend(blank_rows)\n",
     "\n",
-    "                                        df = df.append(pd.Series(row_data, index=df.columns), \n",
-    "                                                                  ignore_index=True)\n",
-    "    df.drop_duplicates(inplace=True)\n",
+    "                                        predictions = predictions.append(pd.Series(row_data, index=predictions.columns), \n",
+    "                                                                         ignore_index=True)\n",
+    "    #df.drop_duplicates(inplace=True)\n",
     "    #datetime.strptime('Oct', '%b')\n",
     "    #df.set_index('date')\n",
     "    \n",
-    "    return df, year\n",
+    "    return predictions, year\n",
     "def loading_odds(df, year):\n",
     "    \"\"\"Loads odds to spreadsheet\n",
     "    Args:\n",
@@ -189,7 +203,7 @@
     "\n",
     "    for gameboard in soup.findAll('table', attrs={'class': 'viBodyContainerTble'}):\n",
     "        for num, games in enumerate(gameboard.findAll('td', attrs={'class': 'viBodyBorderNorm'})):\n",
-    "            for game_info in games.findAll('td'):                        \n",
+    "            for game_info in games.findAll('td'):  \n",
     "                for date in game_info.findAll('span', attrs={'class': 'cellTextHot'}):\n",
     "                    date = date.get_text().split()[0]\n",
     "                    month = date.split('/')[0]\n",
@@ -231,14 +245,31 @@
     "\n",
     "    book['team'] = teams_list\n",
     "    book['date'] = dates_list\n",
+    "\n",
+    "    book = book[book.date <= df.date.max()]    # Only getting odds for games in current week\n",
     "    odds = book[['team', 'odds']]\n",
     "    df = pd.merge(odds, df)[['date', 'team', 'win%', 'odds']]\n",
     "\n",
     "    return df\n",
-    "def game_outcomes(df):\n",
+    "def combining_data(predictions, df):\n",
+    "    \"\"\"Appends current predictions to season long dataframe\n",
+    "    Args:\n",
+    "        predictions: dataframe of predictions\n",
+    "        df: dataframe of data\n",
+    "    Returns:\n",
+    "        df: combined dataframe\n",
+    "    \"\"\"\n",
+    "\n",
+    "    cols = df.columns\n",
+    "    df = pd.concat([df, predictions], ignore_index=True, )\n",
+    "    df = df[cols]\n",
+    "    df.replace(np.nan, '', inplace=True)\n",
+    "    return(df)\n",
+    "def game_outcomes(df, week_num):\n",
     "    \"\"\"Finds winners and losers of games\n",
     "    Args:\n",
     "        df: dataframe of data\n",
+    "        week_num: week of games\n",
     "    Returns:\n",
     "        winners, losers: lists of winners and loser of games\n",
     "    \"\"\"\n",
@@ -258,7 +289,7 @@
     "\n",
     "    # Gathering data\n",
     "    for week in soup.findAll('section', attrs={'class': 'week'}):\n",
-    "        if week.get_text()[5] == '6':\n",
+    "        if week.get_text()[5] == str(week_num):\n",
     "            for date in week.findAll('div', attrs={'class': 'days'}):\n",
     "                for day in date.findAll('div', attrs={'class': 'day'}):  \n",
     "                    for game in day.findAll('div', attrs={'class': 'game'}):\n",
@@ -333,6 +364,16 @@
     "    else:\n",
     "        return('')\n",
     "    \n",
+    "def spreadsheet_formatter(df):\n",
+    "    \"\"\"Formats spreadsheet\n",
+    "    Args:\n",
+    "        df: dataframe of data\n",
+    "\n",
+    "    \"\"\"\n",
+    "    if 'Unnamed: 0' in df.columns:\n",
+    "        df.drop('Unnamed: 0', axis=1, inplace=True)\n",
+    "        \n",
+    "    df.replace(np.nan, '', inplace=True)\n",
     "    \n",
     "def odds_formatter(row):\n",
     "    \"\"\"Formats odds\n",
@@ -395,13 +436,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "file_name = 'z:\\\\python projects\\\\ NFL Game Outcome Spreadsheet.csv'\n",
+    "file_name = 'z:\\\\python projects\\\\week_5.csv'\n",
+    "\n",
+    "df = getting_spreadsheet(file_name) # Retrieving Spreadsheet\n",
+    "spreadsheet_formatter(df)\n",
+    "df['odds'] = df.apply(lambda row: odds_formatter(row), axis=1)\n",
+    "winners, losers = game_outcomes(df, week_num=5)\n",
+    "df['result'] = df.apply(lambda row: team_won_lost(row, winners, losers), axis=1)\n",
+    "df['w/l'] = df.apply(lambda row: money_won_lost(row), axis=1)\n",
+    "df['total'] = df['w/l'].sum()\n",
+    "predictions, year = predictions_538(week_num=6)\n",
+    "predictions = loading_odds(predictions, year)\n",
+    "predictions['implied'] = predictions.apply(lambda row: implied_probability(row), axis=1)\n",
+    "predictions['pick'] = predictions.apply(lambda row: pick(row), axis=1)\n",
+    "df = combining_data(predictions, df)\n",
+    "\n",
+    "writing_spreadsheet(df,  'z:\\\\python projects\\\\NFL Game Outcome Spreadsheet.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "file_name = 'z:\\\\python projects\\\\week 5.csv'\n",
     "\n",
     "df, year = initial_538_predictions()\n",
     "df = loading_odds(df, year)\n",
@@ -419,11 +487,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "df = getting_spreadsheet(file_name) # Retrieving Spreadsheet\n",
     "df = predictions_538(df)\n",
     "df['odds'] = df.apply(lambda row: odds_formatter(row), axis=1)\n",
     "df.replace(np.nan, '', inplace=True)\n",
@@ -433,8 +500,7 @@
     "df['result'] = df.apply(lambda row: team_won_lost(row, winners, losers), axis=1)\n",
     "df['w/l'] = df.apply(lambda row: money_won_lost(row), axis=1)\n",
     "df['total'] = df['w/l'].sum()\n",
-    "writing_spreadsheet(df, file_name)\n",
-    "df"
+    "writing_spreadsheet(df, file_name)"
    ]
   }
  ],
