--- a/Game Predictor.ipynb
+++ b/Game Predictor.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "from bs4 import BeautifulSoup\n",
-    "from datetime import datetime\n",
+    "import datetime\n",
     "import requests\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -19,27 +19,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 107,
    "metadata": {
     "code_folding": [
      0,
-     59,
-     67,
-     134,
-     218,
-     271,
-     282,
-     289,
-     301,
-     305,
-     317,
-     328,
-     330,
-     342,
-     344,
+     57,
+     65,
+     77,
+     141,
+     212,
+     233,
+     246,
+     299,
+     310,
+     329,
+     345,
      356,
-     366,
-     378
+     370,
+     384,
+     406
     ],
     "collapsed": true,
     "scrolled": true
@@ -79,7 +77,7 @@
     "                            date = h4.get_text().strip()\n",
     "                            date = date.split(', ')[1]\n",
     "                            date = date[0:3] + date[4:] + ' ' + str(year)\n",
-    "                            date = datetime.strptime(date, '%b %d %Y')\n",
+    "                            date = datetime.datetime.strptime(date, '%b %d %Y')\n",
     "                            date = date.strftime('%m/%d/%Y')\n",
     "\n",
     "\n",
@@ -100,8 +98,6 @@
     "                                        df = df.append(pd.Series(['', team, win_percentage], \n",
     "                                                                  index=df.columns), ignore_index=True)\n",
     "    df.drop_duplicates(inplace=True)\n",
-    "    #datetime.strptime('Oct', '%b')\n",
-    "    #df.set_index('date')\n",
     "    \n",
     "    return df, year\n",
     "    \n",
@@ -113,6 +109,18 @@
     "        dataframe of data\n",
     "    \"\"\"\n",
     "    return(pd.read_csv(file_name))\n",
+    "def separating_games(df):\n",
+    "    \"\"\"Separates old games and new games\n",
+    "    Args:\n",
+    "        df: dataframe of data\n",
+    "    Returns:\n",
+    "        old_games: games with results already\n",
+    "        current_game: games without results\n",
+    "    \"\"\"\n",
+    "    old_games = df[df['result'] != '']\n",
+    "    old_games_index = df[df['result'] != ''].index \n",
+    "    current_games = df.drop(old_games_index)\n",
+    "    return old_games, current_games\n",
     "def predictions_538(week_num):\n",
     "    \"\"\"Loads 538 predictions\n",
     "    Args:\n",
@@ -149,7 +157,7 @@
     "                            date = h4.get_text().strip()\n",
     "                            date = date.split(', ')[1]\n",
     "                            date = date[0:3] + date[4:] + ' ' + str(year)\n",
-    "                            date = datetime.strptime(date, '%b %d %Y')\n",
+    "                            date = datetime.datetime.strptime(date, '%b %d %Y')\n",
     "                            date = date.strftime('%m/%d/%Y')\n",
     "\n",
     "\n",
@@ -175,10 +183,7 @@
     "\n",
     "                                        predictions = predictions.append(pd.Series(row_data, index=predictions.columns), \n",
     "                                                                         ignore_index=True)\n",
-    "    #df.drop_duplicates(inplace=True)\n",
-    "    #datetime.strptime('Oct', '%b')\n",
-    "    #df.set_index('date')\n",
-    "    \n",
+    "  \n",
     "    return predictions, year\n",
     "def loading_odds(df, year):\n",
     "    \"\"\"Loads odds to spreadsheet\n",
@@ -251,17 +256,37 @@
     "    df = pd.merge(odds, df)[['date', 'team', 'win%', 'odds']]\n",
     "\n",
     "    return df\n",
-    "def combining_data(predictions, df):\n",
-    "    \"\"\"Appends current predictions to season long dataframe\n",
+    "def date_formatter(row):\n",
+    "    \"\"\"Loads odds to spreadsheet\n",
     "    Args:\n",
-    "        predictions: dataframe of predictions\n",
-    "        df: dataframe of data\n",
+    "        df: dataframe that odds will be written to\n",
+    "        year: year that will be used to gather the dates of the games\n",
+    "    Returns:\n",
+    "        dataframe of datawith odds\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    if row.date == '':\n",
+    "        return(row.date)\n",
+    "    else:\n",
+    "        split_date = row.date.split('/')\n",
+    "        day = split_date[1]\n",
+    "        day = day.zfill(2)\n",
+    "        date = split_date[0] + day + split_date[2]\n",
+    "        date = datetime.datetime.strptime(date, '%m%d%Y')\n",
+    "        date = date.strftime('%m/%d/%Y')\n",
+    "        return(date)\n",
+    "            \n",
+    "    \n",
+    "def combining_data(df_top, df_bottom):\n",
+    "    \"\"\"Appends two dataframes\n",
+    "    Args:\n",
+    "        df_top: dataframe of data to go on top\n",
+    "        df_bottom: dataframe of data to go on bottom\n",
     "    Returns:\n",
     "        df: combined dataframe\n",
     "    \"\"\"\n",
-    "\n",
-    "    cols = df.columns\n",
-    "    df = pd.concat([df, predictions], ignore_index=True, )\n",
+    "    cols = df_top.columns\n",
+    "    df = pd.concat([df_top, df_bottom], ignore_index=True, )\n",
     "    df = df[cols]\n",
     "    df.replace(np.nan, '', inplace=True)\n",
     "    return(df)\n",
@@ -299,7 +324,7 @@
     "                            date = h4.get_text()\n",
     "                            date = date.split(', ')[1]\n",
     "                            date = date[0:3] + date[4:6] + ' ' + str(year)\n",
-    "                            date = datetime.strptime(date, '%b %d %Y')\n",
+    "                            date = datetime.datetime.strptime(date, '%b %d %Y')\n",
     "                            date = date.strftime('%m/%d/%Y')\n",
     "\n",
     "\n",
@@ -436,51 +461,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 111,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "file_name = 'z:\\\\python projects\\\\week_5.csv'\n",
+    "file_name = 'z:\\\\python projects\\\\NFL Game Outcome Spreadsheet.csv'\n",
     "\n",
     "df = getting_spreadsheet(file_name) # Retrieving Spreadsheet\n",
     "spreadsheet_formatter(df)\n",
-    "df['odds'] = df.apply(lambda row: odds_formatter(row), axis=1)\n",
-    "winners, losers = game_outcomes(df, week_num=5)\n",
-    "df['result'] = df.apply(lambda row: team_won_lost(row, winners, losers), axis=1)\n",
-    "df['w/l'] = df.apply(lambda row: money_won_lost(row), axis=1)\n",
-    "df['total'] = df['w/l'].sum()\n",
-    "predictions, year = predictions_538(week_num=6)\n",
-    "predictions = loading_odds(predictions, year)\n",
-    "predictions['implied'] = predictions.apply(lambda row: implied_probability(row), axis=1)\n",
-    "predictions['pick'] = predictions.apply(lambda row: pick(row), axis=1)\n",
-    "df = combining_data(predictions, df)\n",
+    "old_games, current_games = separating_games(df)\n",
+    "#print(current_games)\n",
+    "current_games['odds'] = current_games.apply(lambda row: odds_formatter(row), axis=1)\n",
+    "winners, losers = game_outcomes(current_games, week_num=6)\n",
+    "#print(winners, losers)\n",
+    "current_games['result'] = current_games.apply(lambda row: team_won_lost(row, winners, losers), axis=1)\n",
+    "#print(current_games)\n",
+    "current_games['w/l'] = current_games.apply(lambda row: money_won_lost(row), axis=1)\n",
+    "current_games['total'] = current_games['w/l'].sum()\n",
+    "df = combining_data(old_games, current_games)\n",
+    "df['date'] = df.apply(lambda row: date_formatter(row), axis=1)\n",
     "\n",
-    "writing_spreadsheet(df,  'z:\\\\python projects\\\\NFL Game Outcome Spreadsheet.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "file_name = 'z:\\\\python projects\\\\week 5.csv'\n",
+    "if datetime.date.today().strftime('%m/%d/%Y') > df.date.max():\n",
+    "    new_games, year = predictions_538(week_num=6)\n",
+    "    new_games = loading_odds(new_games, year)\n",
+    "    new_games['implied'] = new_games.apply(lambda row: implied_probability(row), axis=1)\n",
+    "    new_games['pick'] = new_games.apply(lambda row: pick(row), axis=1)\n",
+    "    df = combining_data(df, new_games)\n",
     "\n",
-    "df, year = initial_538_predictions()\n",
-    "df = loading_odds(df, year)\n",
-    "df['implied'] = df.apply(lambda row: implied_probability(row), axis=1)\n",
-    "df['pick'] = df.apply(lambda row: pick(row), axis=1)\n",
-    "winners, losers = game_outcomes(df)\n",
-    "df['result'] = df.apply(lambda row: team_won_lost(row, winners, losers), axis=1)\n",
-    "df['w/l'] = df.apply(lambda row: money_won_lost(row), axis=1)\n",
-    "df['total'] = df['w/l'].sum()\n",
-    "writing_spreadsheet(df, file_name)\n",
-    "df"
+    "\n",
+    "writing_spreadsheet(df, file_name)"
    ]
   },
   {
@@ -490,18 +501,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "df = predictions_538(df)\n",
-    "df['odds'] = df.apply(lambda row: odds_formatter(row), axis=1)\n",
-    "df.replace(np.nan, '', inplace=True)\n",
-    "df['implied'] = df.apply(lambda row: implied_probability(row), axis=1)\n",
-    "df['pick'] = df.apply(lambda row: pick(row), axis=1)\n",
-    "winners, losers = game_outcomes(df)\n",
-    "df['result'] = df.apply(lambda row: team_won_lost(row, winners, losers), axis=1)\n",
-    "df['w/l'] = df.apply(lambda row: money_won_lost(row), axis=1)\n",
-    "df['total'] = df['w/l'].sum()\n",
-    "writing_spreadsheet(df, file_name)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
