--- a/Game Predictor.ipynb
+++ b/Game Predictor.ipynb
@@ -2,8 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {
+    "code_folding": [
+     7,
+     38
+    ],
     "collapsed": true
    },
    "outputs": [],
@@ -14,12 +18,74 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "header_name = 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.90 Safari/537.36'"
+    "header_name = 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.90 Safari/537.36'\n",
+    "team_acronym_dict = {'ATL': 'Atlanta',\n",
+    "                    'BAL': 'Baltimore',\n",
+    "                    'BUF': 'Buffalo',\n",
+    "                    'CAR': 'Carolina',\n",
+    "                    'CHI': 'Chicago',\n",
+    "                    'CIN': 'Cincinnati',\n",
+    "                    'CLE': 'Cleveland',\n",
+    "                    'DAL': 'Dallas',\n",
+    "                    'DEN': 'Denver',\n",
+    "                    'DET': 'Detroit',\n",
+    "                    'GB': 'Green Bay',\n",
+    "                    'HOU': 'Houston',\n",
+    "                    'IND': 'Indianapolis',\n",
+    "                    'JAX': 'Jacksonville',\n",
+    "                    'KC': 'Kansas City',\n",
+    "                    'LAC': 'L.A. Chargers',\n",
+    "                    'LAR': 'L.A. Rams',\n",
+    "                    'MIA': 'Miami',\n",
+    "                    'MIN': 'Minnesota',\n",
+    "                    'NE': 'New England',\n",
+    "                    'NO': 'New Orleans',\n",
+    "                    'NYG': 'N.Y. Giants',\n",
+    "                    'NYJ': 'N.Y. Jets',\n",
+    "                    'OAK': 'Oakland',\n",
+    "                    'PHI': 'Philadelphia',\n",
+    "                    'PIT': 'Pittsburgh',\n",
+    "                    'SEA': 'Seattle',\n",
+    "                    'SF': 'San Francisco',\n",
+    "                    'TB': 'Tampa Bay',\n",
+    "                    'TEN': 'Tennessee',\n",
+    "                    'WAS': 'Washington'}\n",
+    "nickname_town_dict = {'Falcons': 'Atlanta',\n",
+    "                    'Ravens': 'Baltimore',\n",
+    "                    'Bills': 'Buffalo',\n",
+    "                    'Panthers': 'Carolina',\n",
+    "                    'Bears': 'Chicago',\n",
+    "                    'Bengals': 'Cincinnati',\n",
+    "                    'Browns': 'Cleveland',\n",
+    "                    'Cowboys': 'Dallas',\n",
+    "                    'Broncos': 'Denver',\n",
+    "                    'Lions': 'Detroit',\n",
+    "                    'Packers': 'Green Bay',\n",
+    "                    'Texans': 'Houston',\n",
+    "                    'Colts': 'Indianapolis',\n",
+    "                    'Jaguars': 'Jacksonville',\n",
+    "                    'Chiefs': 'Kansas City',\n",
+    "                    'Chargers': 'L.A. Chargers',\n",
+    "                    'Rams': 'L.A. Rams',\n",
+    "                    'Dolphins': 'Miami',\n",
+    "                    'Vikings': 'Minnesota',\n",
+    "                    'Patriots': 'New England',\n",
+    "                    'Saints': 'New Orleans',\n",
+    "                    'Giants': 'N.Y. Giants',\n",
+    "                    'Jets': 'N.Y. Jets',\n",
+    "                    'Raiders': 'Oakland',\n",
+    "                    'Eagles': 'Philadelphia',\n",
+    "                    'Steelers': 'Pittsburgh',\n",
+    "                    'Seahawks': 'Seattle',\n",
+    "                    '49ers': 'San Francisco',\n",
+    "                    'Buccaneers': 'Tampa Bay',\n",
+    "                    'Titans': 'Tennessee',\n",
+    "                    'Redskins': 'Washington'}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "metadata": {
     "code_folding": [
      0,
@@ -37,7 +103,9 @@
      356,
      370,
      384,
-     406
+     406,
+     437,
+     445
     ],
     "collapsed": true,
     "scrolled": true
@@ -450,6 +518,45 @@
     "                return(int(row['odds']))\n",
     "        else:\n",
     "            return(0)\n",
+    "def week_finder():\n",
+    "    \"\"\"Finds what week games are in\n",
+    "    Returns:\n",
+    "        week: week of games\n",
+    "    \"\"\"\n",
+    "    if datetime.date.today() < datetime.date(2019, 10, 21):\n",
+    "        week = 7\n",
+    "    elif datetime.date.today() < datetime.date(2019, 10, 28):\n",
+    "        week = 8\n",
+    "    elif datetime.date.today() < datetime.date(2019, 11, 4):\n",
+    "        week = 9\n",
+    "    elif datetime.date.today() < datetime.date(2019, 11, 11):\n",
+    "        week = 10\n",
+    "    elif datetime.date.today() < datetime.date(2019, 11, 18):\n",
+    "        week = 11\n",
+    "    elif datetime.date.today() < datetime.date(2019, 11, 25):\n",
+    "        week = 12\n",
+    "    elif datetime.date.today() < datetime.date(2019, 12, 2):\n",
+    "        week = 13\n",
+    "    elif datetime.date.today() < datetime.date(2019, 12, 9):\n",
+    "        week = 14\n",
+    "    elif datetime.date.today() < datetime.date(2019, 12, 16):\n",
+    "        week = 15\n",
+    "    elif datetime.date.today() < datetime.date(2019, 12, 23):\n",
+    "        week = 16\n",
+    "    elif datetime.date.today() < datetime.date(2019, 12, 30):\n",
+    "        week = 17\n",
+    "    else:\n",
+    "        week = 0\n",
+    "        \n",
+    "    return(week)\n",
+    "def team_acronym_converter(team_acronyms):\n",
+    "    \"\"\"Converts acronym to team name\n",
+    "    Args:\n",
+    "        acronym: acronym of team\n",
+    "    Returns:\n",
+    "        name of team\n",
+    "    \"\"\"\n",
+    "    return team_acronym[acronym]\n",
     "def writing_spreadsheet(df, filename):\n",
     "    \"\"\"Writing to spreadsheet\n",
     "    Args:\n",
@@ -461,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -472,26 +579,94 @@
     "df = getting_spreadsheet(file_name) # Retrieving Spreadsheet\n",
     "spreadsheet_formatter(df)\n",
     "old_games, current_games = separating_games(df)\n",
-    "#print(current_games)\n",
+    "\n",
     "current_games['odds'] = current_games.apply(lambda row: odds_formatter(row), axis=1)\n",
-    "winners, losers = game_outcomes(current_games, week_num=6)\n",
-    "#print(winners, losers)\n",
+    "winners, losers = game_outcomes(current_games, week_num=week_finder()-1)\n",
+    "\n",
     "current_games['result'] = current_games.apply(lambda row: team_won_lost(row, winners, losers), axis=1)\n",
-    "#print(current_games)\n",
+    "\n",
     "current_games['w/l'] = current_games.apply(lambda row: money_won_lost(row), axis=1)\n",
     "current_games['total'] = current_games['w/l'].sum()\n",
     "df = combining_data(old_games, current_games)\n",
     "df['date'] = df.apply(lambda row: date_formatter(row), axis=1)\n",
     "\n",
     "if datetime.date.today().strftime('%m/%d/%Y') > df.date.max():\n",
-    "    new_games, year = predictions_538(week_num=6)\n",
+    "    new_games, year = predictions_538(week_num=week_finder())\n",
     "    new_games = loading_odds(new_games, year)\n",
     "    new_games['implied'] = new_games.apply(lambda row: implied_probability(row), axis=1)\n",
     "    new_games['pick'] = new_games.apply(lambda row: pick(row), axis=1)\n",
     "    df = combining_data(df, new_games)\n",
     "\n",
+    "df\n",
+    "#writing_spreadsheet(df, file_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
-    "writing_spreadsheet(df, file_name)"
+    "df_columns = ['date', 'team', 'win%']\n",
+    "df = pd.DataFrame(columns=df_columns)\n",
+    "\n",
+    "year = 2019\n",
+    "result = ''\n",
+    "URL = 'https://www.espn.com/nfl/scoreboard/_/year/2019/seasontype/2/week/6'\n",
+    "#URL = 'https://www.espn.com/nfl/game/_/gameId/401128132'\n",
+    "headers = {'User-Agent': header_name}\n",
+    "source = requests.get(URL, headers=headers)\n",
+    "soup = BeautifulSoup(source.content, 'html.parser')\n",
+    "\n",
+    "for a in soup.findAll('div', attrs={'class': 'scoreboard-top no-tabs'}):\n",
+    "    print(a.get_text())\n",
+    "\n",
+    "for a in soup.findAll('a', attrs={'class': 'button-alt sm'}):\n",
+    "    print(a)\n",
+    "#for a in soup.findAll('body'):#, attrs={'class': 'mobileScoreboardLink'}):\n",
+    "        #print(a.get_text())\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "df_columns = ['team', 'win%']\n",
+    "df = pd.DataFrame(columns=df_columns)\n",
+    "\n",
+    "year = 2019\n",
+    "result = ''\n",
+    "URL = 'https://www.foxsports.com/nfl/predictions'\n",
+    "headers = {'User-Agent': header_name}\n",
+    "source = requests.get(URL, headers=headers)\n",
+    "soup = BeautifulSoup(source.content, 'html.parser')\n",
+    "\n",
+    "for matchup in soup.findAll('div', attrs={'class': 'wisbb_predictionChip'}):\n",
+    "    for num, team_name in enumerate(matchup.findAll('span', attrs={'class': 'wisbb_teamName'})):\n",
+    "        if num == 0:\n",
+    "            away_team = team_name.get_text().strip()\n",
+    "        elif num == 1:\n",
+    "            home_team = team_name.get_text().strip()\n",
+    "        else:\n",
+    "            continue\n",
+    "        print(away_team)   \n",
+    "    for num, predictions in enumerate(matchup.findAll('span', attrs={'class': 'wisbb_predData'})):\n",
+    "        prediction_text = predictions.get_text()\n",
+    "        team_acronym = predictions.get_text()[0:3].strip()\n",
+    "        if team_acronym in team_acronym_dict and len(a)>4 and num ==1:\n",
+    "            print(prediction_text)\n",
+    "            df = df.append(pd.Series([team_acronym_dict[team_acronym], 1], \n",
+    "                                     index=df.columns), ignore_index=True)\n",
+    "            \n",
+    "df\n"
    ]
   },
   {
