--- a/NFL Game Predictor.ipynb
+++ b/NFL Game Predictor.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "code_folding": [
-     7,
-     39,
-     71
+     8,
+     40,
+     72
     ],
     "collapsed": true
    },
@@ -18,6 +18,7 @@
     "import requests\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import time\n",
     "\n",
     "header_name = 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.90 Safari/537.36'\n",
     "acronym_to_town_dict = {'ARI': 'Arizona',\n",
@@ -120,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 19,
    "metadata": {
     "code_folding": [
      0,
@@ -129,18 +130,21 @@
      83,
      150,
      206,
-     277,
-     296,
-     307,
-     377,
-     388,
-     407,
-     427,
-     439,
-     455,
-     498,
-     543
+     273,
+     292,
+     303,
+     316,
+     371,
+     382,
+     401,
+     421,
+     433,
+     449,
+     469,
+     492,
+     537
     ],
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -380,9 +384,6 @@
     "                    month = date.split('/')[0]\n",
     "                    day = date.split('/')[1]\n",
     "\n",
-    "                    if(int(day[0]) == 0):\n",
-    "                        day = day[1:]\n",
-    "\n",
     "                    date = str(month) + '/' + str(day) + '/' + str(year)\n",
     "                    dates_list.extend([date, date])\n",
     "\n",
@@ -413,10 +414,9 @@
     "                    book = book.append(pd.Series(temp_home_list, index=names), ignore_index=True)\n",
     "                    temp_away_list = []\n",
     "                    temp_home_list = []\n",
-    "\n",
+    "                    \n",
     "    book['team'] = teams_list\n",
     "    book['date'] = dates_list\n",
-    "\n",
     "    book = book[book.date <= df.date.max()]    # Only getting odds for games in current week\n",
     "    odds = book[['team', 'odds']]\n",
     "    df = pd.merge(odds, df)[['week', 'date', 'team', '538 win%', 'Fox win%', 'odds']]\n",
@@ -507,20 +507,18 @@
     "                    if date == game_date:\n",
     "                        # Finding data for each game\n",
     "                        for game_body in day.findAll('table', attrs={'class': 'game-body'}):\n",
-    "                            winner_tag = day.find('td', attrs={'class': 'td text team winner'})\n",
-    "                            if winner_tag:\n",
+    "                            for winner_tag in game_body.findAll('td', attrs={'class': 'td text team winner'}):\n",
     "                                winner = winner_tag.get_text().strip()\n",
-    "                                loser_tag = day.find('td', attrs={'class': 'td text team loser'})\n",
+    "                               \n",
+    "                                if team_name == winner:\n",
+    "                                    return('w')\n",
+    "                                \n",
+    "                            for loser_tag in game_body.findAll('td', attrs={'class': 'td text team loser'}):\n",
     "                                loser = loser_tag.get_text().strip()\n",
-    "                            else:\n",
-    "                                return('')\n",
-    "                            \n",
-    "                            if team_name == winner:\n",
-    "                                return('w')\n",
-    "                            elif team_name == loser:\n",
-    "                                return('l')\n",
-    "                            else:\n",
-    "                                return('')\n",
+    "\n",
+    "                                if team_name == loser:\n",
+    "                                    return('l')\n",
+    "        \n",
     "    return('')\n",
     "def odds_checker(row):\n",
     "    \"\"\"Checks if odds for game are present\n",
@@ -608,7 +606,7 @@
     "        updated entry for winner/loser\n",
     "    \"\"\"\n",
     "    game_date = row.date\n",
-    "    team_name = row.team\n",
+    "    team_name = row.team \n",
     "    result = game_outcomes(game_date, team_name)\n",
     "    if datetime.date.today().strftime('%m/%d/%Y') < row.date:\n",
     "        return('')\n",
@@ -699,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -742,8 +740,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": []
   }
  ],
